Added primitive decks fetching

--- a/src/app/decks/decks.component.html
+++ b/src/app/decks/decks.component.html
@@ -9,7 +9,7 @@
     <!-- Owner Id Definition -->
     <ng-container matColumnDef="owner_id">
         <mat-header-cell *matHeaderCellDef> Owner ID </mat-header-cell>
-        <mat-cell *matCellDef="let element">{{element.owner_id}}</mat-cell>
+        <mat-cell *matCellDef="let element">{{element.owner.id}}</mat-cell>
     </ng-container>
 
     <!-- Commander Definition-->
