--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,4 +1,4 @@
-<p>users works!</p>
+<button mat-raised-button (click)="promptAddUser()"> New User </button>
 <mat-table [dataSource]="dataSource">
     <!-- Name Definition -->
     <ng-container matColumnDef="name">
