Support for adding decks

--- a/src/app/decks/decks.component.html
+++ b/src/app/decks/decks.component.html
@@ -1,3 +1,4 @@
+<button mat-raised-button (click)="promptAddDeck()"> New Deck </button>
 <mat-table [dataSource]="dataSource">
     <!-- Deck Name Definition -->
     <ng-container matColumnDef="name">
