Updated decks component

--- a/src/app/decks/decks.component.html
+++ b/src/app/decks/decks.component.html
@@ -1,4 +1,5 @@
 <button mat-raised-button (click)="promptAddDeck()"> New Deck </button>
+<button mat-raised-button (click)="deckService.refresh()"> Refresh</button>
 <mat-table [dataSource]="dataSource">
     <!-- Deck Name Definition -->
     <ng-container matColumnDef="name">
