--- a/src/app/deck/deck.component.html
+++ b/src/app/deck/deck.component.html
@@ -1,4 +1,10 @@
-<h1> Deck</h1>
-<p> Id: {{(deck$ | async)?.id}}</p>
-<p> Name: {{(deck$ | async)?.name}}</p>
-<a [routerLink]="['/users', (deck$ | async)?.owner]"> Owner: {{userService.getUser((deck$ | async)?.owner ?? 0)?.username}}</a>
+@if (this.deck) {
+    <h1> Deck</h1>
+    <p> Id: {{deck.id}}</p>
+    <p> Name: {{deck.name}}</p>
+    <a [routerLink]="['/users', deck.owner]"> Owner: {{userService.getUser(deck.owner ?? 0)?.username}}</a>
+    <p> Rating: 50</p>
+}
+@else {
+    <h1> No deck with id: {{id}}</h1>
+}
