Began work on games component
- Added games and game-card component to routing
- Added game-card with basic styling
- Added basic game-card to games

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
     </a>
     <a mat-button routerLink="/decks" routerLinkActive="active">Decks</a>
     <a mat-button routerLink="/users" routerLinkActive="active">Users</a>
+    <a mat-button routerLink="/games" routerLinkActive="active">Games</a>
 
 </mat-toolbar>
 <!-- The routed views render in the <router-outlet>-->
