Tons of changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
-    <a mat-button>
+    <h1>
         Magic Deck Elo
-    </a>
-    <a mat-button routerLink="/decks" routerLinkActive="active">Decks</a>
-    <a mat-button routerLink="/users" routerLinkActive="active">Users</a>
-    <a mat-button routerLink="/games" routerLinkActive="active">Games</a>
+    </h1>
+    <a mat-flat-button routerLink="/decks" routerLinkActive="active">Decks</a>
+    <a mat-flat-button routerLink="/users" routerLinkActive="active">Users</a>
+    <a mat-flat-button routerLink="/games" routerLinkActive="active">Games</a>
 
 </mat-toolbar>
 <!-- The routed views render in the <router-outlet>-->
