--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,3 @@
 <h1> User </h1>
-<p> Id: {{(user$ | async)?.id}}</p>
-<p> Name: {{(user$ | async)?.username}}</p>
+<p> Id: {{user?.id}}</p>
+<p> Name: {{user?.username}}</p>
