--- a/src/app/decks/decks.component.html
+++ b/src/app/decks/decks.component.html
@@ -1,31 +1,35 @@
-<button mat-raised-button (click)="promptAddDeck()"> New Deck </button>
-<!--<button mat-raised-button (click)="deckService.refresh()"> Refresh</button>-->
-<mat-table [dataSource]="dataSource">
-    <!-- Deck Name Definition -->
-    <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-        <mat-cell *matCellDef="let element"><a [routerLink]="['/decks', element.id]">{{element.name}}</a></mat-cell>
-    </ng-container>
+<div class="pane">
+    <mat-toolbar>
+        <span>Decks</span>
+        <span class="spacer"></span>
+        <button mat-stroked-button (click)="promptAddDeck()">Add Deck</button>
+    </mat-toolbar>
+    <!--<button mat-raised-button (click)="deckService.refresh()"> Refresh</button>-->
+    <mat-table [dataSource]="dataSource" matSort>
+        <!-- Deck Name Definition -->
+        <ng-container matColumnDef="name">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+            <mat-cell *matCellDef="let deck"><a [routerLink]="['/decks', deck.id]">{{deck.name}}</a></mat-cell>
+        </ng-container>
 
-    <!-- Owner Id Definition -->
-    <ng-container matColumnDef="owner_id">
-        <mat-header-cell *matHeaderCellDef> Owner </mat-header-cell>
-        <mat-cell *matCellDef="let element"><a [routerLink]="['/users', element.owner]"> {{users.getUser(element.owner)?.username}}</a></mat-cell>
-    </ng-container>
+        <!-- Commander Definition-->
+        <ng-container matColumnDef="commander">
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Commander</mat-header-cell>
+            <mat-cell *matCellDef="let deck">{{deck.commander}}</mat-cell>
+        </ng-container>
 
-    <!-- Commander Definition-->
-    <ng-container matColumnDef="commander">
-        <mat-header-cell *matHeaderCellDef>Commander</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{element.commander}}</mat-cell>
-    </ng-container>
+        <!-- Rating Definition-->
+        <ng-container matColumnDef="rating" >
+            <mat-header-cell *matHeaderCellDef mat-sort-header>Rating</mat-header-cell>
+            <mat-cell *matCellDef="let deck">{{deck.rating}}</mat-cell>
+        </ng-container>
 
-    <!-- Rating Definition-->
-    <ng-container matColumnDef="rating" >
-        <mat-header-cell *matHeaderCellDef>Rating</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{element.rating}}</mat-cell>
-    </ng-container>
+        <!-- Header and Row declarations -->
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
 
-    <!-- Header and Row declarations -->
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+    <mat-paginator [pageSizeOptions]="[10, 20, 50]"
+                   showFirstLastButtons>
+    </mat-paginator>
+</div>
