--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,12 +1,25 @@
-<button mat-raised-button (click)="promptAddUser()"> New User </button>
-<mat-table [dataSource]="dataSource">
-    <!-- Name Definition -->
-    <ng-container matColumnDef="name">
-       <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-       <mat-cell *matCellDef="let element"><a [routerLink]="['/users', element.id]"> {{element.username}}</a></mat-cell>
-    </ng-container>
+<div class="pane">
+    <mat-toolbar>
+        <span>Users</span>
+        <span class="spacer"></span>
+        <button mat-stroked-button (click)="promptAddUser()">Add User</button>
+    </mat-toolbar>
+    
 
-    <!-- Header and Row declarations-->
-    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+    <mat-table [dataSource]="dataSource" matSort>
+        <!-- Name Definition -->
+        <ng-container matColumnDef="username">
+            <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
+            <mat-cell *matCellDef="let user"><a [routerLink]="['/users', user.id]"> {{user.username}}</a></mat-cell>
+        </ng-container>
+        
+        <!-- Header and Row declarations-->
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+
+    <mat-paginator [pageSizeOptions]="[10, 20, 50]"
+                   showFirstLastButtons>
+    </mat-paginator>
+
+</div>
