--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,6 +3,7 @@
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
 // Plus imports for other components in your app.
+@use '../src/app/styles/theme-colors.scss' as theme;
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
@@ -10,12 +11,14 @@
 @include mat.elevation-classes();
 @include mat.app-background();
 
+
+
 // Define the theme object.
 $deck_ranking_client-theme: mat.define-theme((
   color: (
     theme-type: dark,
-    primary: mat.$violet-palette,
-    tertiary: mat.$rose-palette,
+    primary: theme.$primary-palette,
+    tertiary: theme.$tertiary-palette
   ),
   density: (
     scale: 0,
@@ -27,6 +30,24 @@ $deck_ranking_client-theme: mat.define-theme((
 // that you are using.
 :root {
   @include mat.all-component-themes($deck_ranking_client-theme);
+
+  @include mat.theme-overrides((
+    surface-dim: #11111b,
+    surface: #1e1e2e,
+    surface-bright: #313244,
+    surface-container: #313244,
+    primary: #cba6f7
+  ));
+
+  @include mat.table-overrides((
+    background-color: var(--mat-sys-surface)
+  ));
+  @include mat.paginator-overrides((
+    container-background-color: var(--mat-sys-surface)
+  ));
+  @include mat.toolbar-overrides((
+    container-background-color: var(--mat-sys-surface),
+  ));
 }
 
 // Comment out the line below if you want to use the pre-defined typography utility classes.
@@ -38,12 +59,20 @@ $deck_ranking_client-theme: mat.define-theme((
 /* You can add global styles to this file, and also import other style files */
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { 
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: var(--mat-sys-surface-dim);
+}
 
+.pane {
+  margin: 16px;
+  padding: 8px;
+  border-radius: 16px;
+  box-shadow: var(--mat-sys-level1);
+  background-color: var(--mat-sys-surface);
+}
 
-.game-card {
-  background: var(--mat-sys-primary-container);
-  color: var(--mat-sys-on-primary-container);
-  border: 1px solid red;
-  font: var(--mat-sys-body-large);
+.spacer {
+  flex: 1 1 auto;
 }
